# perplexity-openrouter-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
docker/: Dockerfile
src/: mcp_tools.py  openrouter_client.py  perplexity_search.py
