[project]
name = "perplexity-openrouter-mcp"
version = "0.1.0"
description = "Perplexity MCP Server - Web search tools via OpenRouter for LLM agent integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13",
    "httpx>=0.27",
    "openai>=1.0",
]

[project.scripts]
perplexity-mcp = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

